fix auth validation err msg visibility

--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,12 @@ h2 {
   color: white
 }
 
+.error {
+  background: rgb(255, 113, 18);
+  color: white;
+  padding: 5px;
+  font-size: 15px;
+}
 /* navbar */
 
 .greenrush {
